@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.cismet.cids.custom.wuppertal.distribution</groupId>
         <artifactId>wuppertal-distribution</artifactId>
-        <version>26.05.1</version>
+        <version>26.05.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -101,6 +101,8 @@
                                 <jvmarg>-Djnlp.userDomain=WUNDA_BLAU</jvmarg>
                                 <jvmarg>-Xms512M</jvmarg>
                                 <jvmarg>-Xmx1024M</jvmarg>
+                                <jvmarg>--add-opens</jvmarg>
+                                <jvmarg>java.base/java.lang=ALL-UNNAMED</jvmarg>
                             </jvmargs>
                             <ui>
                                 <name>${launcher.name} v${project.version}</name>
